# SymphonyMediaBridge

./: .clang-format  .cppcheck-suppressions  .gitignore  .semgrepignore  CMakeLists-gtest.txt.in  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  Test with long running time  client3ssrs.txt  cmake_install.cmake  config.json  default.profraw  generate_localmake.sh  generate_xcode_project.sh  localdev-config.json  main.cpp  prepsmb.sh  pushsmb.sh  rtprcv-1-1057337027  rtprcv-1-2632652516  rtprcv-1-311487833  rtprcv-1-4001012711  rtprcv-3-2171434708  rtprcv-4-175148686  rtprcv-5-627153022  tmp.md  tmp23.json  tmp67.json
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md
Jenkins/: Jenkinsfile  PRUnitTestRunner.groovy  PRUnitTestRunnerAddressSanitizerCoverage.groovy  PRUnitTestRunnerLeakSanitizer.groovy  PRUnitTestRunnerRelease.groovy  PRUnitTestRunnerThreadSanitizer.groovy  build-push-docker-loadtests.groovy  build-push-docker.groovy
api/: AllocateConference.h  AllocateEndpoint.h  BarbellDescription.h  ConferenceEndpoint.h  DataChannelMessage.h  DataChannelMessageParser.cpp  DataChannelMessageParser.h  EndpointDescription.cpp  EndpointDescription.h  Generator.cpp  Generator.h  JsonBuilder.h  JsonUtils.h  JsonWriter.h  Parser.cpp  Parser.h  Recording.h  RecordingChannel.h  RtcDescriptors.cpp  RtcDescriptors.h  SimulcastGroup.h  utils.cpp  utils.h
aws/: AwsHarvester.cpp  AwsHarvester.h
bblogs/: logs.sh
bridge/: ApiRequestHandler.cpp  ApiRequestHandler.h  AudioStream.h  AudioStreamDescription.h  Barbell.h  (+35 more)
test/: CMakeLists-gtest.txt.in  CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  ResourceLoader.cpp  ResourceLoader.h  TestConfig.h.in  gtest_main.cpp  gtest_main2.cpp  load_test_main.cpp  macros.h
test/api/: ParserTest.cpp
test/bridge/: ActiveMediaListTest.cpp  ActiveMediaListTestLevels.h  ApiRequestHandlerTest.cpp  BarbellMessagesTest.cpp  DataChannelMessageSizeTest.cpp  DummyRtcTransport.h  EngineFunctionTest.cpp  EngineStreamDirectorTest.cpp  MixerTest.cpp  PacketCacheTest.cpp  RtpAudioRewriterTest.cpp  RtpVideoRewriterTest.cpp  SsrcOutboundContextTest.cpp  UnackedPacketsTrackerTest.cpp  VideoForwarderRtxReceiveJobTest.cpp  VideoMissingPacketsTrackerTest.cpp  VideoNackReceiveJobTest.cpp  Vp8RewriterTest.cpp
test/bwe/: BandwidthUtilsTest.cpp  BwBurstTracker.cpp  BwBurstTracker.h  EstimatorReRun.cpp  EstimatorTestEasy.cpp  FakeAudioSource.cpp  FakeAudioSource.h  FakeCall.cpp  FakeCall.h  FakeCrossTraffic.cpp  FakeCrossTraffic.h  FakeMedia.cpp  FakeMedia.h  FakeVideoSource.cpp  FakeVideoSource.h  MatrixTests.cpp  RateControllerTest.cpp  RcCall.cpp  RcCall.h
test/codec/: AudioProcessingTest.cpp  G711CodecTest.cpp  H264HeaderTest.cpp  OpusCodecTest.cpp  Vp8HeaderTest.cpp
test/concurrency/: LockFreeListTest.cpp  MpmcMapTest.cpp  MpmcQueueTest.cpp  MpscTest.cpp  ProcessIntervalTest.cpp  TestValues.h
test/config/: ConfigTest.cpp
test/crypto/: AESTest.cpp  AesIvGeneratorTest.cpp
test/include/mocks/: EndpointListenerMock.h  EngineMixerSpy.h  EngineMock.h  IceSessionEventListenerMock.h  MixerManagerAsyncMock.h  MixerManagerSpy.h  RtcTransportMock.h  TimeSourceMock.h  TransportFactoryMock.h  TransportMock.h
test/integration/: BarbellTest.cpp  BarbellTest.h  ConfIntegrationTest.cpp  FFTanalysis.cpp  FFTanalysis.h  FFTtest.cpp  IceIntegrationTest.cpp  IceTransportTest.cpp  IntegrationAudioTest.cpp  IntegrationCallTypes.cpp  IntegrationLegApiTest.cpp  IntegrationTest.cpp  IntegrationTest.h  LoadTestConfig.h  MixedLegManagementTest.cpp  MixerTimeoutTest.cpp  RealTimeTest.cpp  RealTimeTest.h  RtpDump.cpp  RtpDump.h  SampleDataUtils.cpp  SampleDataUtils.h  SrtpIntegrationTest.cpp  StatsTest.cpp  TimeTurnerTest.cpp  TransportFactoryStub.h  TransportStub.h  load_test_config.json
test/integration/emulator/: ApiChannel.cpp  ApiChannel.h  AudioSource.cpp  AudioSource.h  Barbell.cpp  Barbell.h  BaseChannel.cpp  BaseChannel.h  CallConfigBuilder.h  ColibriChannel.cpp  ColibriChannel.h  Conference.cpp  Conference.h  FakeEndpointFactory.cpp  FakeEndpointFactory.h  FakeEndpointImpl.cpp  FakeEndpointImpl.h  FakeRecordingEndpoint.h  FakeTcpEndpoint.cpp  FakeTcpEndpoint.h  FakeTcpServerEndpoint.cpp  FakeTcpServerEndpoint.h  FakeUdpEndpoint.cpp  FakeUdpEndpoint.h  FakeVideoDecoder.cpp  FakeVideoDecoder.h  HttpRequests.cpp  HttpRequests.h  Httpd.cpp  Httpd.h  JitterPacketSource.cpp  JitterPacketSource.h  SfuClient.cpp  SfuClient.h  SfuClientReceivers.h  SfuGroupCall.h  TimeTurner.cpp  TimeTurner.h
test/jobmanager/: JobManagerTest.cpp  JobTest.cpp
test/legacyapi/: GeneratorTest.cpp  ParserTest.cpp
test/math/: FieldsTest.cpp
test/memory/: ArrayTest.cpp  BacklogTest.cpp  ListTest.cpp  MapTest.cpp  PoolAllocatorTest.cpp  PoolBufferTest.cpp  PriorityQueueTest.cpp  RingAllocatorTest.cpp  RingBufferTest.cpp  StackMapTest.cpp
test/resources/: api-patch-empty-ice-candidates.json  api-patch-no-ice-candidates.json
test/rtp/: RtcpFeedbackTest.cpp  RtcpNackBuilderTest.cpp  SendTimeTest.cpp
test/sctp/: SctpBasicsTests.cpp  SctpEndpoint.cpp  SctpEndpoint.h  SctpTransferTests.cpp
test/transport/: AdaptiveJitterTest.cpp  EndpointListenerMock.h  FakeNetwork.cpp  FakeNetwork.h  FakeUdpEndpoint.cpp  FakeUdpEndpoint.h  IceIntegrationTest.cpp  IceTest.cpp  IoUringTest.cpp  Ipv6Test.cpp  JitterTest.cpp  NetworkLink.cpp  NetworkLink.h  RecordingTransportTest.cpp  RtcTransportTest.cpp  RtcpReportsProducerTest.cpp  RtpTest.cpp  SctpIntegrationTest.cpp  SctpTest.cpp  SendJob.h  SrtpProtectJob.cpp  SrtpProtectJob.h  SrtpTest.cpp  SrtpUnprotectJob.cpp  SrtpUnprotectJob.h  TransportIntegrationTest.cpp  TransportIntegrationTest.h
test/transport/ice/: IceCandidateTest.cpp
test/transport/recp/: RecStartStopEventBuilderTest.cpp  RecStreamAddedEventBuilderTest.cpp
test/utils/: ApiUtils.cpp  Base64Test.cpp  Crc32Test.cpp  FunctionTest.cpp  LogSpamTest.cpp  NeighboursTest.cpp  OutboundSequenceNumberTest.cpp  RandGeneratorTest.cpp  SimpleJsonTest.cpp  SocketAddressTest.cpp  StdExtensionsTest.cpp  StringBuilderTest.cpp  StringTokenizerTest.cpp  TimeSourceTest.cpp  TrackerTest.cpp
(+574 files in other folders)
